--- a/Orchard_analysis_1.ipynb
+++ b/Orchard_analysis_1.ipynb
@@ -371,6 +371,9 @@
     "\"\"\"\n",
     "query6= \"\"\"\n",
     "alter table Inspections add primary key (camis, inspect_date)\n",
+    "alter table Inspections ADD CONSTRAINT fk_CAMIS\n",
+    "FOREIGN KEY (CAMIS)\n",
+    "REFERENCES Businesses(CAMIS)\n",
     "\"\"\"\n",
     "\n",
     "query7 = \"\"\"\n",
@@ -384,6 +387,9 @@
     "\"\"\"\n",
     "query8= \"\"\"\n",
     "alter table Gradings add primary key (camis, grade_date)\n",
+    "alter table Gradings ADD CONSTRAINT fk_CAMIS\n",
+    "FOREIGN KEY (CAMIS)\n",
+    "REFERENCES Businesses(CAMIS)\n",
     "\"\"\"\n",
     "\n",
     "\n"
@@ -734,9 +740,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 179,
    "metadata": {
-    "collapsed": true
+    "collapsed": false
    },
    "outputs": [],
    "source": [
@@ -744,6 +750,7 @@
     "\n",
     "query= \"\"\"\n",
     "select * from Violations\n",
+    "order by violation_code asc\n",
     "limit 10\n",
     "\"\"\"\n",
     "violations_table = pd.read_sql_query(query,engine)"
@@ -751,7 +758,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 180,
    "metadata": {
     "collapsed": false
    },
@@ -771,53 +778,53 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>04L</td>\n",
-       "      <td>Evidence of mice or live mice present in facil...</td>\n",
+       "      <td></td>\n",
+       "      <td></td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>10F</td>\n",
-       "      <td>Non-food contact surface improperly constructe...</td>\n",
+       "      <td>02A</td>\n",
+       "      <td>Food not cooked to required minimum temperature.</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>06C</td>\n",
-       "      <td>Food not protected from potential source of co...</td>\n",
+       "      <td>02B</td>\n",
+       "      <td>Hot food item not held at or above 140?? F.</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
-       "      <td>08A</td>\n",
-       "      <td>Facility not vermin proof. Harborage or condit...</td>\n",
+       "      <td>02C</td>\n",
+       "      <td>Hot food item that has been cooked and refrige...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
-       "      <td>09B</td>\n",
-       "      <td>Thawing procedures improper.</td>\n",
+       "      <td>02G</td>\n",
+       "      <td>Cold food item held above 41?? F (smoked fish ...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>5</th>\n",
-       "      <td>15L</td>\n",
-       "      <td>Smoke free workplace smoking policy inadequate...</td>\n",
+       "      <td>02H</td>\n",
+       "      <td>Food not cooled by an approved method whereby ...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>6</th>\n",
-       "      <td></td>\n",
-       "      <td></td>\n",
+       "      <td>03A</td>\n",
+       "      <td>Food from unapproved or unknown source or home...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>7</th>\n",
-       "      <td>04N</td>\n",
-       "      <td>Filth flies or food/refuse/sewage-associated (...</td>\n",
+       "      <td>03B</td>\n",
+       "      <td>Shellfish not from approved source, improperly...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>8</th>\n",
-       "      <td>09A</td>\n",
-       "      <td>Canned food product observed dented and not se...</td>\n",
+       "      <td>04A</td>\n",
+       "      <td>Food Protection Certificate not held by superv...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>9</th>\n",
-       "      <td>02G</td>\n",
-       "      <td>Cold food item held above 41?? F (smoked fish ...</td>\n",
+       "      <td>04C</td>\n",
+       "      <td>Food worker does not use proper utensil to eli...</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -825,19 +832,19 @@
       ],
       "text/plain": [
        "  violation_code                              violation_description\n",
-       "0            04L  Evidence of mice or live mice present in facil...\n",
-       "1            10F  Non-food contact surface improperly constructe...\n",
-       "2            06C  Food not protected from potential source of co...\n",
-       "3            08A  Facility not vermin proof. Harborage or condit...\n",
-       "4            09B                       Thawing procedures improper.\n",
-       "5            15L  Smoke free workplace smoking policy inadequate...\n",
-       "6                                                                  \n",
-       "7            04N  Filth flies or food/refuse/sewage-associated (...\n",
-       "8            09A  Canned food product observed dented and not se...\n",
-       "9            02G  Cold food item held above 41?? F (smoked fish ..."
+       "0                                                                  \n",
+       "1            02A   Food not cooked to required minimum temperature.\n",
+       "2            02B        Hot food item not held at or above 140?? F.\n",
+       "3            02C  Hot food item that has been cooked and refrige...\n",
+       "4            02G  Cold food item held above 41?? F (smoked fish ...\n",
+       "5            02H  Food not cooled by an approved method whereby ...\n",
+       "6            03A  Food from unapproved or unknown source or home...\n",
+       "7            03B  Shellfish not from approved source, improperly...\n",
+       "8            04A  Food Protection Certificate not held by superv...\n",
+       "9            04C  Food worker does not use proper utensil to eli..."
       ]
      },
-     "execution_count": 50,
+     "execution_count": 180,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -848,7 +855,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 95,
+   "execution_count": 175,
    "metadata": {
     "collapsed": false
    },
@@ -866,14 +873,19 @@
     "Businesses.DBA as NAME,\n",
     "Businesses.ZIPCODE,\n",
     "Businesses.PHONE,\n",
+    "Businesses.CUISINE_DESCRIPTION,\n",
     "Gradings.grade as Grade,\n",
     "Gradings.grade_date as `Grade Date`\n",
     "from \n",
     "Businesses left join\n",
     "Inspections on Businesses.CAMIS = Inspections.CAMIS\n",
     "left join Gradings on Businesses.CAMIS = Gradings.CAMIS\n",
-    "where Inspections.score<15 && Gradings.grade= 'A' && Gradings.grade_date >'2015-12-31'\n",
-    "order by score DESC\n",
+    "where Inspections.score<15 \n",
+    "&& Gradings.grade= 'A' \n",
+    "&& Gradings.grade_date >'2015-12-31'\n",
+    "&& locate('american', Businesses.CUISINE_DESCRIPTION)>0\n",
+    "\n",
+    "order by Gradings.grade_date DESC\n",
     "limit 10\n",
     "\"\"\"\n",
     "favorites_table = pd.read_sql_query(query,engine)"
@@ -881,7 +893,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 96,
+   "execution_count": 176,
    "metadata": {
     "collapsed": false
    },
@@ -898,6 +910,7 @@
        "      <th>NAME</th>\n",
        "      <th>ZIPCODE</th>\n",
        "      <th>PHONE</th>\n",
+       "      <th>CUISINE_DESCRIPTION</th>\n",
        "      <th>Grade</th>\n",
        "      <th>Grade Date</th>\n",
        "    </tr>\n",
@@ -905,113 +918,135 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>41221190</td>\n",
-       "      <td>PANADERIA COATZINGO</td>\n",
-       "      <td>11372</td>\n",
-       "      <td>7184294160</td>\n",
-       "      <td>A</td>\n",
-       "      <td>2016-06-21</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>41320866</td>\n",
-       "      <td>WO HOP 17</td>\n",
-       "      <td>10013</td>\n",
-       "      <td>2122672536</td>\n",
-       "      <td>A</td>\n",
-       "      <td>2016-05-20</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>50017041</td>\n",
-       "      <td>JUST SALAD</td>\n",
-       "      <td>10001</td>\n",
-       "      <td>2123555808</td>\n",
-       "      <td>A</td>\n",
-       "      <td>2016-03-16</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>50050835</td>\n",
-       "      <td>SUBWAY</td>\n",
-       "      <td>11377</td>\n",
-       "      <td>7187799166</td>\n",
-       "      <td>A</td>\n",
-       "      <td>2016-09-16</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>40367677</td>\n",
-       "      <td>CAPITOL RESTAURANT</td>\n",
-       "      <td>10034</td>\n",
-       "      <td>2129425090</td>\n",
-       "      <td>A</td>\n",
-       "      <td>2016-09-29</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>5</th>\n",
-       "      <td>40704305</td>\n",
-       "      <td>LA DOLCE ITALIA BAKERY</td>\n",
-       "      <td>11375</td>\n",
-       "      <td>7182685297</td>\n",
-       "      <td>A</td>\n",
-       "      <td>2016-01-13</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>6</th>\n",
-       "      <td>41008329</td>\n",
-       "      <td>NATIONAL BAKERY</td>\n",
-       "      <td>10472</td>\n",
-       "      <td>7188422396</td>\n",
-       "      <td>A</td>\n",
-       "      <td>2016-01-19</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>7</th>\n",
        "      <td>41042416</td>\n",
        "      <td>CITY CINEMAS 123</td>\n",
        "      <td>10022</td>\n",
        "      <td>2128329054</td>\n",
+       "      <td>American</td>\n",
        "      <td>A</td>\n",
        "      <td>2016-10-03</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>8</th>\n",
-       "      <td>41074629</td>\n",
-       "      <td>DOMINO'S</td>\n",
-       "      <td>10460</td>\n",
-       "      <td>7185424993</td>\n",
+       "      <th>1</th>\n",
+       "      <td>40367677</td>\n",
+       "      <td>CAPITOL RESTAURANT</td>\n",
+       "      <td>10034</td>\n",
+       "      <td>2129425090</td>\n",
+       "      <td>American</td>\n",
        "      <td>A</td>\n",
-       "      <td>2016-08-04</td>\n",
+       "      <td>2016-09-29</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>50049969</td>\n",
+       "      <td>COURTYARD NOSH/ COURTYARD LONG ISLAND CITY/MAN...</td>\n",
+       "      <td>11101</td>\n",
+       "      <td>7187860003</td>\n",
+       "      <td>American</td>\n",
+       "      <td>A</td>\n",
+       "      <td>2016-09-28</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>41458716</td>\n",
+       "      <td>101 CAFE</td>\n",
+       "      <td>11416</td>\n",
+       "      <td>7188482233</td>\n",
+       "      <td>American</td>\n",
+       "      <td>A</td>\n",
+       "      <td>2016-09-19</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>50050190</td>\n",
+       "      <td>SWEETGREEN ASTOR PLACE</td>\n",
+       "      <td>10003</td>\n",
+       "      <td>9146023590</td>\n",
+       "      <td>American</td>\n",
+       "      <td>A</td>\n",
+       "      <td>2016-09-07</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>40657772</td>\n",
+       "      <td>GOOD RESTAURANT</td>\n",
+       "      <td>10014</td>\n",
+       "      <td>2126918080</td>\n",
+       "      <td>American</td>\n",
+       "      <td>A</td>\n",
+       "      <td>2016-07-15</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>40943583</td>\n",
+       "      <td>THE PRESS BOX</td>\n",
+       "      <td>10022</td>\n",
+       "      <td>2123171826</td>\n",
+       "      <td>American</td>\n",
+       "      <td>A</td>\n",
+       "      <td>2016-06-02</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7</th>\n",
+       "      <td>41477498</td>\n",
+       "      <td>SWEET SWEET SUE'S</td>\n",
+       "      <td>10312</td>\n",
+       "      <td>7189662253</td>\n",
+       "      <td>American</td>\n",
+       "      <td>A</td>\n",
+       "      <td>2016-05-11</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8</th>\n",
+       "      <td>41573306</td>\n",
+       "      <td>RED MANGO</td>\n",
+       "      <td>10038</td>\n",
+       "      <td>2123123120</td>\n",
+       "      <td>American</td>\n",
+       "      <td>A</td>\n",
+       "      <td>2016-03-25</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>9</th>\n",
-       "      <td>41187602</td>\n",
-       "      <td>INDIGO INDIAN BISTRO</td>\n",
-       "      <td>10023</td>\n",
-       "      <td>2125793900</td>\n",
+       "      <td>50018863</td>\n",
+       "      <td>STIX CHELSEA/HOTEL INDIGO/ROOFTOP BAR</td>\n",
+       "      <td>10001</td>\n",
+       "      <td>6464844338</td>\n",
+       "      <td>American</td>\n",
        "      <td>A</td>\n",
-       "      <td>2016-04-18</td>\n",
+       "      <td>2016-03-22</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "      CAMIS                    NAME  ZIPCODE       PHONE Grade  Grade Date\n",
-       "0  41221190     PANADERIA COATZINGO    11372  7184294160     A  2016-06-21\n",
-       "1  41320866               WO HOP 17    10013  2122672536     A  2016-05-20\n",
-       "2  50017041              JUST SALAD    10001  2123555808     A  2016-03-16\n",
-       "3  50050835                  SUBWAY    11377  7187799166     A  2016-09-16\n",
-       "4  40367677      CAPITOL RESTAURANT    10034  2129425090     A  2016-09-29\n",
-       "5  40704305  LA DOLCE ITALIA BAKERY    11375  7182685297     A  2016-01-13\n",
-       "6  41008329         NATIONAL BAKERY    10472  7188422396     A  2016-01-19\n",
-       "7  41042416        CITY CINEMAS 123    10022  2128329054     A  2016-10-03\n",
-       "8  41074629                DOMINO'S    10460  7185424993     A  2016-08-04\n",
-       "9  41187602    INDIGO INDIAN BISTRO    10023  2125793900     A  2016-04-18"
+       "      CAMIS                                               NAME  ZIPCODE  \\\n",
+       "0  41042416                                   CITY CINEMAS 123    10022   \n",
+       "1  40367677                                 CAPITOL RESTAURANT    10034   \n",
+       "2  50049969  COURTYARD NOSH/ COURTYARD LONG ISLAND CITY/MAN...    11101   \n",
+       "3  41458716                                           101 CAFE    11416   \n",
+       "4  50050190                             SWEETGREEN ASTOR PLACE    10003   \n",
+       "5  40657772                                    GOOD RESTAURANT    10014   \n",
+       "6  40943583                                      THE PRESS BOX    10022   \n",
+       "7  41477498                                  SWEET SWEET SUE'S    10312   \n",
+       "8  41573306                                          RED MANGO    10038   \n",
+       "9  50018863              STIX CHELSEA/HOTEL INDIGO/ROOFTOP BAR    10001   \n",
+       "\n",
+       "        PHONE CUISINE_DESCRIPTION Grade  Grade Date  \n",
+       "0  2128329054            American     A  2016-10-03  \n",
+       "1  2129425090            American     A  2016-09-29  \n",
+       "2  7187860003            American     A  2016-09-28  \n",
+       "3  7188482233            American     A  2016-09-19  \n",
+       "4  9146023590            American     A  2016-09-07  \n",
+       "5  2126918080            American     A  2016-07-15  \n",
+       "6  2123171826            American     A  2016-06-02  \n",
+       "7  7189662253            American     A  2016-05-11  \n",
+       "8  2123123120            American     A  2016-03-25  \n",
+       "9  6464844338            American     A  2016-03-22  "
       ]
      },
-     "execution_count": 96,
+     "execution_count": 176,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1020,6 +1055,24 @@
     "# A SAMPLE OF SOME PLACES THAT ARE LIKELY TO BE MY FRIEND'S FAVORITES\n",
     "favorites_table"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
