--- a/Orchard_analysis_1.ipynb
+++ b/Orchard_analysis_1.ipynb
@@ -324,6 +324,8 @@
     "# GRADES TABLE-       details of grade for each business\n",
     "# VIOLATIONS TABLE-   violation codes and their descriptions\n",
     "\n",
+    "# For each table, primary and foreign key constraints are put in. \n",
+    "\n",
     "# The dates are converted from text to date format for future consistency and proper comparison\n",
     "\n",
     "\n",
@@ -1055,33 +1057,6 @@
     "# A SAMPLE OF SOME PLACES THAT ARE LIKELY TO BE MY FRIEND'S FAVORITES\n",
     "favorites_table"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
