--- a/Orchard_analysis_1.ipynb
+++ b/Orchard_analysis_1.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 185,
    "metadata": {
     "collapsed": false
    },
@@ -15,7 +15,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 186,
    "metadata": {
     "collapsed": false
    },
@@ -30,7 +30,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 187,
    "metadata": {
     "collapsed": false
    },
@@ -41,7 +41,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 188,
    "metadata": {
     "collapsed": false
    },
@@ -52,7 +52,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 189,
    "metadata": {
     "collapsed": false
    },
@@ -68,7 +68,7 @@
        " 'sys']"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 189,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -79,7 +79,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 190,
    "metadata": {
     "collapsed": false
    },
@@ -103,7 +103,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 191,
    "metadata": {
     "collapsed": false
    },
@@ -118,7 +118,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 192,
    "metadata": {
     "collapsed": false
    },
@@ -298,7 +298,7 @@
        "4                    10/18/2016  Cycle Inspection / Initial Inspection  "
       ]
      },
-     "execution_count": 31,
+     "execution_count": 192,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -360,7 +360,7 @@
     "alter table `Violations` add Primary Key (violation_code)\n",
     "\"\"\"\n",
     "query5 = \"\"\"\n",
-    "create table Inspections as\n",
+    "create table Inspections_1 as\n",
     "select\n",
     "CAMIS,\n",
     "cast(concat(substr(`inspection date`, 7,4),'-',substr(`inspection date`, 1,2),'-',substr(`inspection date`, 4,2)) as date) as inspect_date,\n",
@@ -371,6 +371,30 @@
     "`INSPECTION TYPE` as inspection_type\n",
     "from NYC_rest_data_sample\n",
     "\"\"\"\n",
+    "\n",
+    "# This table has a lot of duplicate entries- i.e. same business same day inspection details multiple times\n",
+    "# Therefore, create a new table out of this table by filtering out the duplicates\n",
+    "\n",
+    "query5_1 = \"\"\"\n",
+    "\n",
+    "create table Inspections as \n",
+    "select \n",
+    "camis,\n",
+    "inspect_date,\n",
+    "action,\n",
+    "violation_code,\n",
+    "critical_flag,\n",
+    "score,\n",
+    "inspection_type,\n",
+    "count(camis)\n",
+    "from Inspections_1\n",
+    "group by inspect_date, camis\n",
+    "\n",
+    "\"\"\"\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
     "query6= \"\"\"\n",
     "alter table Inspections add primary key (camis, inspect_date)\n",
     "alter table Inspections ADD CONSTRAINT fk_CAMIS\n",
@@ -379,7 +403,7 @@
     "\"\"\"\n",
     "\n",
     "query7 = \"\"\"\n",
-    "create table Gradings as\n",
+    "create table Gradings_1 as\n",
     "select\n",
     "CAMIS,\n",
     "cast(concat(substr(`grade date`, 7,4),'-',substr(`grade date`, 1,2),'-',substr(`grade date`, 4,2)) as date) as grade_date,\n",
@@ -387,6 +411,23 @@
     "from NYC_rest_data_sample\n",
     "where `grade date` != ''\n",
     "\"\"\"\n",
+    "\n",
+    "# This table has a lot of duplicate entries- i.e. same business same day inspection details multiple times\n",
+    "# Therefore, create a new table out of this table by filtering out the duplicates\n",
+    "\n",
+    "query7_1 = \"\"\"\n",
+    "create table Gradings as\n",
+    "select\n",
+    "camis,\n",
+    "grade_date,\n",
+    "grade,\n",
+    "count(camis)\n",
+    "from Gradings_1\n",
+    "group by grade_date, camis\n",
+    "\"\"\"\n",
+    "\n",
+    "\n",
+    "\n",
     "query8= \"\"\"\n",
     "alter table Gradings add primary key (camis, grade_date)\n",
     "alter table Gradings ADD CONSTRAINT fk_CAMIS\n",
@@ -857,7 +898,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 175,
+   "execution_count": 195,
    "metadata": {
     "collapsed": false
    },
@@ -885,7 +926,7 @@
     "where Inspections.score<15 \n",
     "&& Gradings.grade= 'A' \n",
     "&& Gradings.grade_date >'2015-12-31'\n",
-    "&& locate('american', Businesses.CUISINE_DESCRIPTION)>0\n",
+    "&& locate('thai', Businesses.CUISINE_DESCRIPTION)>0\n",
     "\n",
     "order by Gradings.grade_date DESC\n",
     "limit 10\n",
@@ -895,7 +936,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 176,
+   "execution_count": 196,
    "metadata": {
     "collapsed": false
    },
@@ -920,135 +961,135 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>41042416</td>\n",
-       "      <td>CITY CINEMAS 123</td>\n",
-       "      <td>10022</td>\n",
-       "      <td>2128329054</td>\n",
-       "      <td>American</td>\n",
+       "      <td>41545732</td>\n",
+       "      <td>LEMONGRASS GRILL</td>\n",
+       "      <td>11201</td>\n",
+       "      <td>7185229728</td>\n",
+       "      <td>Thai</td>\n",
        "      <td>A</td>\n",
-       "      <td>2016-10-03</td>\n",
+       "      <td>2016-10-13</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>40367677</td>\n",
-       "      <td>CAPITOL RESTAURANT</td>\n",
-       "      <td>10034</td>\n",
-       "      <td>2129425090</td>\n",
-       "      <td>American</td>\n",
+       "      <td>41632888</td>\n",
+       "      <td>RIDGEWOOD AUTHENTIC THAI KITCHEN</td>\n",
+       "      <td>11385</td>\n",
+       "      <td>7184187717</td>\n",
+       "      <td>Thai</td>\n",
        "      <td>A</td>\n",
-       "      <td>2016-09-29</td>\n",
+       "      <td>2016-10-11</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>50049969</td>\n",
-       "      <td>COURTYARD NOSH/ COURTYARD LONG ISLAND CITY/MAN...</td>\n",
-       "      <td>11101</td>\n",
-       "      <td>7187860003</td>\n",
-       "      <td>American</td>\n",
+       "      <td>41632888</td>\n",
+       "      <td>RIDGEWOOD AUTHENTIC THAI KITCHEN</td>\n",
+       "      <td>11385</td>\n",
+       "      <td>7184187717</td>\n",
+       "      <td>Thai</td>\n",
        "      <td>A</td>\n",
-       "      <td>2016-09-28</td>\n",
+       "      <td>2016-10-11</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
-       "      <td>41458716</td>\n",
-       "      <td>101 CAFE</td>\n",
-       "      <td>11416</td>\n",
-       "      <td>7188482233</td>\n",
-       "      <td>American</td>\n",
+       "      <td>41632888</td>\n",
+       "      <td>RIDGEWOOD AUTHENTIC THAI KITCHEN</td>\n",
+       "      <td>11385</td>\n",
+       "      <td>7184187717</td>\n",
+       "      <td>Thai</td>\n",
        "      <td>A</td>\n",
-       "      <td>2016-09-19</td>\n",
+       "      <td>2016-10-11</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
-       "      <td>50050190</td>\n",
-       "      <td>SWEETGREEN ASTOR PLACE</td>\n",
-       "      <td>10003</td>\n",
-       "      <td>9146023590</td>\n",
-       "      <td>American</td>\n",
+       "      <td>50000055</td>\n",
+       "      <td>BANKOK CUISINE</td>\n",
+       "      <td>11375</td>\n",
+       "      <td>7182614005</td>\n",
+       "      <td>Thai</td>\n",
        "      <td>A</td>\n",
-       "      <td>2016-09-07</td>\n",
+       "      <td>2016-10-11</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>5</th>\n",
-       "      <td>40657772</td>\n",
-       "      <td>GOOD RESTAURANT</td>\n",
-       "      <td>10014</td>\n",
-       "      <td>2126918080</td>\n",
-       "      <td>American</td>\n",
+       "      <td>41275701</td>\n",
+       "      <td>TO BE THAI</td>\n",
+       "      <td>11218</td>\n",
+       "      <td>7184350459</td>\n",
+       "      <td>Thai</td>\n",
        "      <td>A</td>\n",
-       "      <td>2016-07-15</td>\n",
+       "      <td>2016-09-22</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>6</th>\n",
-       "      <td>40943583</td>\n",
-       "      <td>THE PRESS BOX</td>\n",
-       "      <td>10022</td>\n",
-       "      <td>2123171826</td>\n",
-       "      <td>American</td>\n",
+       "      <td>41275701</td>\n",
+       "      <td>TO BE THAI</td>\n",
+       "      <td>11218</td>\n",
+       "      <td>7184350459</td>\n",
+       "      <td>Thai</td>\n",
        "      <td>A</td>\n",
-       "      <td>2016-06-02</td>\n",
+       "      <td>2016-09-22</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>7</th>\n",
-       "      <td>41477498</td>\n",
-       "      <td>SWEET SWEET SUE'S</td>\n",
-       "      <td>10312</td>\n",
-       "      <td>7189662253</td>\n",
-       "      <td>American</td>\n",
+       "      <td>41556098</td>\n",
+       "      <td>UDOM THAI</td>\n",
+       "      <td>11238</td>\n",
+       "      <td>7186228424</td>\n",
+       "      <td>Thai</td>\n",
        "      <td>A</td>\n",
-       "      <td>2016-05-11</td>\n",
+       "      <td>2016-09-20</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>8</th>\n",
-       "      <td>41573306</td>\n",
-       "      <td>RED MANGO</td>\n",
-       "      <td>10038</td>\n",
-       "      <td>2123123120</td>\n",
-       "      <td>American</td>\n",
+       "      <td>41556098</td>\n",
+       "      <td>UDOM THAI</td>\n",
+       "      <td>11238</td>\n",
+       "      <td>7186228424</td>\n",
+       "      <td>Thai</td>\n",
        "      <td>A</td>\n",
-       "      <td>2016-03-25</td>\n",
+       "      <td>2016-09-20</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>9</th>\n",
-       "      <td>50018863</td>\n",
-       "      <td>STIX CHELSEA/HOTEL INDIGO/ROOFTOP BAR</td>\n",
-       "      <td>10001</td>\n",
-       "      <td>6464844338</td>\n",
-       "      <td>American</td>\n",
+       "      <td>50049845</td>\n",
+       "      <td>THAI POCHANA</td>\n",
+       "      <td>11374</td>\n",
+       "      <td>7188971575</td>\n",
+       "      <td>Thai</td>\n",
        "      <td>A</td>\n",
-       "      <td>2016-03-22</td>\n",
+       "      <td>2016-09-12</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "      CAMIS                                               NAME  ZIPCODE  \\\n",
-       "0  41042416                                   CITY CINEMAS 123    10022   \n",
-       "1  40367677                                 CAPITOL RESTAURANT    10034   \n",
-       "2  50049969  COURTYARD NOSH/ COURTYARD LONG ISLAND CITY/MAN...    11101   \n",
-       "3  41458716                                           101 CAFE    11416   \n",
-       "4  50050190                             SWEETGREEN ASTOR PLACE    10003   \n",
-       "5  40657772                                    GOOD RESTAURANT    10014   \n",
-       "6  40943583                                      THE PRESS BOX    10022   \n",
-       "7  41477498                                  SWEET SWEET SUE'S    10312   \n",
-       "8  41573306                                          RED MANGO    10038   \n",
-       "9  50018863              STIX CHELSEA/HOTEL INDIGO/ROOFTOP BAR    10001   \n",
+       "      CAMIS                              NAME  ZIPCODE       PHONE  \\\n",
+       "0  41545732                  LEMONGRASS GRILL    11201  7185229728   \n",
+       "1  41632888  RIDGEWOOD AUTHENTIC THAI KITCHEN    11385  7184187717   \n",
+       "2  41632888  RIDGEWOOD AUTHENTIC THAI KITCHEN    11385  7184187717   \n",
+       "3  41632888  RIDGEWOOD AUTHENTIC THAI KITCHEN    11385  7184187717   \n",
+       "4  50000055                    BANKOK CUISINE    11375  7182614005   \n",
+       "5  41275701                        TO BE THAI    11218  7184350459   \n",
+       "6  41275701                        TO BE THAI    11218  7184350459   \n",
+       "7  41556098                         UDOM THAI    11238  7186228424   \n",
+       "8  41556098                         UDOM THAI    11238  7186228424   \n",
+       "9  50049845                      THAI POCHANA    11374  7188971575   \n",
        "\n",
-       "        PHONE CUISINE_DESCRIPTION Grade  Grade Date  \n",
-       "0  2128329054            American     A  2016-10-03  \n",
-       "1  2129425090            American     A  2016-09-29  \n",
-       "2  7187860003            American     A  2016-09-28  \n",
-       "3  7188482233            American     A  2016-09-19  \n",
-       "4  9146023590            American     A  2016-09-07  \n",
-       "5  2126918080            American     A  2016-07-15  \n",
-       "6  2123171826            American     A  2016-06-02  \n",
-       "7  7189662253            American     A  2016-05-11  \n",
-       "8  2123123120            American     A  2016-03-25  \n",
-       "9  6464844338            American     A  2016-03-22  "
+       "  CUISINE_DESCRIPTION Grade  Grade Date  \n",
+       "0                Thai     A  2016-10-13  \n",
+       "1                Thai     A  2016-10-11  \n",
+       "2                Thai     A  2016-10-11  \n",
+       "3                Thai     A  2016-10-11  \n",
+       "4                Thai     A  2016-10-11  \n",
+       "5                Thai     A  2016-09-22  \n",
+       "6                Thai     A  2016-09-22  \n",
+       "7                Thai     A  2016-09-20  \n",
+       "8                Thai     A  2016-09-20  \n",
+       "9                Thai     A  2016-09-12  "
       ]
      },
-     "execution_count": 176,
+     "execution_count": 196,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1057,6 +1098,15 @@
     "# A SAMPLE OF SOME PLACES THAT ARE LIKELY TO BE MY FRIEND'S FAVORITES\n",
     "favorites_table"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
